@startuml MDD



class Semester <<Planification>>  {
  name: string;
  start: string;
  end: string;
}
class User <<Role>> {
  first_name: string;
  last_name: string;
  id: string;
}

class Group <<Service>>

class Schedule <<Horaire>> {
  group_id: string;
  day: string;
  hours: string;
  activity: string;
  mode: string
  local: string
  teacher_id: string
}

 class Course <<Description d'entite>> {
  id: string;
  titre: string;
}

class Student <<Role>> extends User {
}

class Teacher <<Role>> extends User {
  
}

class Grade <<Document légaux>> {
  student_id: string;
  group_id: string;
  type: string;
  type_id: integer;
  note: number;
}
class University <<Facultatif,Organisation>>

Course "1" -- "*" Group : décrit >
Schedule "*" -- "1" Group : Offert selon <
Schedule "*" -- "1" Teacher : Enseigne dans un group cours selon <
Semester "1" -- "*" Schedule: Offre des groupe cours selon >
Grade "*" --  "1" Student: effectue des\n travaux pour obtenir <
Grade "*" -- "1" Group : demande la réalisation\nde travaux pour obtenir <
Teacher "1" -- "*" Course: est responsable de > 
Student "1" -- "*" Group : est inscrit >
University "1" -r- "*" Teacher: emploie >
University "1" -r- "*" Student: Offre des services >
University "1" -d- "*" Semester: Gère >

@enduml
